# gcc-for-Windows98

./: .gitignore
.github/workflows/: docker.yml
repro/: .env.example  .gitignore  README.md  build.sh  config.json  docker-compose.yml
repro/docker/: consumer.Dockerfile  toolchain-builder.Dockerfile
repro/docker/cmake/: cross-toolchain.cmake  native-toolchain.cmake  wine-gcc.sh  wine-gxx.sh  wine-windres.sh
repro/docker/scripts/: apt-mirror-selector.sh  install-toolchain-artifact.sh  verify-toolchain-contract.sh
repro/docs/: design.md
repro/patches/: README.md  base.py  generate-patches.py
repro/patches/gcc/: README.md  patch.py
repro/patches/mingw-w64/: patch.py
repro/patches/pthread9x/: patch.py
repro/patches/tests/: test_patchsets.py
repro/scripts/: README.md  apply-patches.sh  build-cross-binutils.sh  build-cross-gcc-stage1.sh  build-cross-gcc.sh  build-cross-mingw-w64.sh  build-cross-pthread9x.sh  build-native-binutils.sh  build-native-host-gcc.sh  build-native-mingw-deps.sh  build-native-mingw-w64.sh  build-native-pthread9x.sh  fetch-sources.sh  generate-patches.sh  package-cross-toolset.sh  package-native-toolset.sh  prepare-gcc.sh  prepare-mingw-w64.sh  prepare-pthread9x.sh  retry-clean.sh  run-smoke-pipeline.sh  run-toolchain-build.sh  smoke-check-native-pe.sh  smoke-cmake-build.sh  smoke-verify-layout.sh  verify-compiler-features.sh  verify-cross-compiler-features.sh  verify-native-compiler-features.sh  write-toolchain-manifest.sh
repro/scripts/lib/: common.sh  config_matrix_exports.py  matrix_config.py  status-common.sh  toolchain_manifest.py  validate_matrix_selector.py
repro/scripts/utils/: cross-toolset-status.sh  project-status.sh  (+2 more)
repro/tests/: CMakeLists.txt  README.md
repro/tests/smoke-c/: CMakeLists.txt  exception_test.c  file_io_test.c  floating_point_test.c  hello_pthread.c  hello_world.c  link_compare_test.c  math_test.c  thread_test.c  time_test.c  ucrt_leak_test.c  well_known_global_symbols.c  win98_api_compat_test.c  winsock_test.c
repro/tests/smoke-cpp/: CMakeLists.txt  cpp_exception_cross_test.cpp  cpp_exception_test.cpp  cpp_stl_compat_test.cpp  fstream_comprehensive_test.cpp  hello.cpp  hello_cpp.cpp  hello_exception.cpp  hello_fstream.cpp  hello_iostream.cpp  hello_thread.cpp
(+17 files in other folders)
